# sjtu-compilers

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
results/: grade_all.txt  lab1_slp.txt  lab2_lex.txt  lab3_parse.txt  lab4_semant.txt  lab5_codegen.txt  labs1-4_summary.txt
scripts/: grade.sh
src/straightline/: prog.h  slp.cc  slp.h
src/tiger/absyn/: absyn.cc  absyn.h
src/tiger/env/: env.cc  env.h
src/tiger/errormsg/: errormsg.cc  errormsg.h
src/tiger/escape/: escape.cc  escape.h
src/tiger/lex/: scanner.h  tiger.lex
src/tiger/main/: main.cc  test_lex.cc  test_parse.cc  test_semant.cc
src/tiger/parse/: parse.cc  parse.h  tiger.y
src/tiger/runtime/: runtime.c
src/tiger/semant/: semant.cc  semant.h
src/tiger/symbol/: symbol.cc  symbol.h
src/tiger/translate/: translate.cc  translate.h
src/tiger/types/: types.cc  types.h
